src/scss/index.scss
/* ... */
.container {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: $contactHeight 0;
    height: calc(100% - 5rem);
    width: 100%;
    margin-top: 5rem;
    overflow-x: hidden;
    gap: 4rem;
}

.home-container, .contact-container {
    height: 70%;
    justify-content: center;
    & > div {
        width: 80%;
        background-color: rgba($highlightFont,0.7);
        padding: 1rem;
    }
}

#home {
    display: flex;
}

#projects {
    display: none;
}

#contact {
    display: none;
}

.fader {
    position: relative;
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 75%;
    padding: 1.5rem 2.5rem;
    opacity: 0;
    color: black;
    background-color: rgba($highlightFont, 0.65);
    clip-path: polygon(4% 0, 100% 0, 96% 100%, 0 100%);
    transform: translateX(25vw);
    transition: transform 650ms ease-out, opacity 250ms ease-in, width 400ms ease-in-out;
    
    .project-description {
        width: 90%;
    }

    .image-container {
        position: relative;
        background: white;
        margin: 1rem auto 1.5rem;
        width: 90%;
        box-shadow: 0 0 5px 0 rgba(0,0,0,0.35);
        z-index: 0;

        img {
            height: 100%;
        }

        &::before, &::after {
            position: absolute;
            content: '';
            bottom: 7px;
            width: 45%;
            height: 20px;
            background: rgba(0,0,0,0.3);
            box-shadow: 0 0 5px 8px rgba(0,0,0,0.3);
            z-index: -1;
        }

        &::before {
            left: 10px;
            transform: rotate(-1.5deg);
        }

        &::after {
            right: 10px;
            transform: rotate(1.5deg);
        }

        &:hover {
            &::before, &::after {
                display: none;
            }
        }
    }

    .project-links {
        display: flex;
        justify-content: space-around;
        width: 90%;

        a {
            max-width: 35%;
            height: 2rem;
            display: flex;
            justify-content: center;
            align-items: center;
            background: rgba(0,0,0,0.05);
            border: 1px solid black;
            padding: 1.5rem 2rem;
            color: black;
            text-align: center;
            text-decoration: none;

            &:hover {
                background: rgba(0,0,0,0.8);
                color: pink;
            }
        }
    }
}

.appear {
    transform: translateX(0);
    opacity: 1;
}

.fullscreen {
    display: none;
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    justify-content: center;
    align-items: center;
    background-color: rgba(0,0,0,0.9);
    z-index: 99;

    .image {
        width: 75vw;
        height: 50vw;
        max-width: 75vw;
        max-height: 75vh;
        background-repeat: no-repeat;
        background-size: cover;
        background-position: center;
        outline: 4px solid white;
        outline-offset: 2px;
    }

    .close-fullscreen {
        display: flex;
        justify-content: center;
        align-items: center;
        position: absolute;
        top: 15px;
        right: 15px;
        width: 60px;
        height: 60px;
        font-size: 3rem;
        color: white;
        cursor: pointer;
    }
}

@media screen and (max-width: 750px) {

    .header {
        height: calc(#{$burger-dimensions} * 2);
    }

    .contact-links {
        display: none;
        opacity: 0;
    }

    .fullscreen {

        .close-fullscreen {
            width: 40px;
            height: 40px;
            font-size: 2rem;
        }
    }

    .main {
        width: 100vw;
        margin: 0 auto;

        &::before {
            display: none;
            width: 100%;
        }

        .container {
            margin: 0 auto;
            height: 100%;
            padding: 4rem 0;
        }

        .fader {
            width: 90vw;

            .image-container {
                &::before, &::after {
                    display: none;
                }

                img {
                    height: 100%;
                }
            }
        }
    }

    .menu-container {

        .toggler {
            display: block;
        }
    
        .menu {
            top: -110vh;
            left: 0;
            width: 100vw;
            height: 100vh;
            clip-path: none;
            display: flex;
            flex-direction: column;
            justify-content: center;
            align-items: center;

            ul {
                margin-right: 0;
                transform: rotate(0);
                .link {
                    transform: rotate(0);
                }
                li {
                    margin: 0 auto;
                    text-align: center;
                }
            }
        }
        width: $burger-dimensions;
        height: $burger-dimensions;

        .burger-menu {
            display: flex;

            div {
                height: 5px;
                
                &::before {
                    top: -10px;
                    height: 5px;
                }
                
                &::after {
                    bottom: -10px;
                    height: 5px;
                }
            }
        }
    }

    .toggler:checked ~ .menu {
        top: 0;
    }
}

@media screen and (min-width: 900px) {
    .fader {
        width: 60%;
    }

    .menu-container .menu {
        width: calc(#{$menu-width} * 1);

        ul {
            font-size: 1.2rem;
        }
    }
}
/* ... */

